--- a/css2.html
+++ b/css2.html
@@ -1,5 +1,8 @@
 <link href="https://fonts.googleapis.com/css?family=Alkatra" rel="stylesheet" type="text/css">
     <style>
+        [type='checkbox']{
+        margin:10px 0px 15px 0px;
+        }
         #cat-photo-form{
            background-color:rgb(32, 178, 151);
 
